@@ -1,0 +1,21 @@
+Gosub start
+
+Const one = 1
+
+Common a As Integer
+Dim b As Integer
+
+Type test
+    a As Integer
+    b As Integer
+End Type
+
+Function f()
+    a = 3
+End Function
+
+start:
+    f()
+Return
+
+
